# document_synth

./: README.md  pyproject.toml  report.md
src/document_synth/: crew.py  main.py
src/document_synth/config/: agents.yaml  tasks.yaml
src/document_synth/data/: CIR.docx  Planning du personnel 2024.xlsx  recap.xlsx
src/document_synth/data/documents de recherche/: Amélioration de laffectation des SIRET aux destinataires.docx  Automatisation du traitement.docx  Choix de la Technologie env test.docx  Construction des tags sur les adresses de livraison.docx  Journal synthétique destinataire adresse BAN.docx  LABELISATION DES ERREURS.xlsx  Modification base de donnée projet IA et destinataire.docx  Méthodologie entrainement modèles encodage.docx  Projet 2024.docx  Préparation du datastore et nettoyage des données.docx  Réalisation 2024.docx  Synthèse des travaux effectués.docx  Système IA  - Besoins pour l’l’automatisation du traitement.docx  Travaux sur la correction des destinataires.docx  cahier de charges ia_16052024.docx  processus_de_vote.docx  statistique quotidienne de reconaissance des adresse.xlsx
src/document_synth/tools/: custom_file_reader.py
tests/: test.py
